fix: prevent paragraph font-size style from making mermaid text too big

--- a/themes/mdb/assets/sass/components/_main.scss
+++ b/themes/mdb/assets/sass/components/_main.scss
@@ -56,6 +56,12 @@ main {
           margin: 0 auto;
           display: block;
         }
+
+        p {
+          // Prevent larger text paragraph styles elsewhere from taking effect
+          // on mermaid diagram text.
+          font-size: 1em;
+        }
       }
 
       code {
